# astronomer-providers

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CODEOWNERS  CONTRIBUTING.rst  CONTRIBUTORS_QUICK_START.rst  Makefile  README.rst  RELEASING.rst  SECURITY.md  constraints-3.10-2.4.3.txt  constraints-3.10-2.5.3.txt  constraints-3.10-2.6.3.txt  constraints-3.11-2.6.3.txt  constraints-3.11-2.7.0.txt  constraints-3.8-2.4.3.txt  constraints-3.8-2.5.3.txt  constraints-3.8-2.6.3.txt  constraints-3.9-2.4.3.txt  constraints-3.9-2.6.3.txt  coverage.xml  openlineage_airflow-0.30.2-py3-none-any.whl  openlineage_python-0.30.2-py3-none-any.whl  pyproject.toml  ruff.toml  setup.cfg  setup.py  yamllint-config.yml
.circleci/: Dockerfile  config.yml
.circleci/integration-tests/: Dockerfile  Dockerfile.astro_cloud  Dockerfile.gen_1  airflow_dag_introspection.py  astronomer_migration_dag.py  azure-nuke-config.yaml  create_connections.py  master_dag.py  nuke-config.yml  providers_connections_template.yaml  script.sh
.circleci/scripts/: Dockerfile  pre_commit_changelog_upto_date.py  pre_commit_context_typing_compat.py  pre_commit_readme_extra.py  pre_commit_setup_cfg_all_extra.py  pre_commit_setup_cfg_python_3_11_all_extra.py  pre_commit_sync_version_desc_package.py  pre_commit_sync_version_docs.py  verify_tag_and_version.py
.github/: boring-cyborg.yml
.github/scripts/: get_latest_runtime_image_tag.py  refactor_dag.py  validate_release_commit.py
.github/workflows/: delete-branch-on-pr-close.yaml  deploy-integration-tests.yaml  deploy-to-astro-cloud-reuse-wf.yaml  release.yaml  reuse-wf-check-rc-release.yaml  reuse-wf-deploy-to-astro-cloud.yaml  reuse-wf-trigger-dag.yaml  runtime-image-update.yaml  stale.yaml  test-rc-release.yaml  trigger-dag-reuse-wf.yaml
astronomer/operators/http/: __init__.py
astronomer/providers/: package.py
astronomer/providers/http/: __init__.py
astronomer/providers/utils/: __init__.py  sensor_util.py
astronomer_operators/: __init__.py  airbyte.py  databricks.py  external_task.py  filesystem.py  http.py  postgres.py  snowflake.py
astronomer_operators/core/example_dags/: example_external_task.py  example_file_sensor.py
astronomer_operators/core/operators/: external_task.py
astronomer_operators/core/sensors/: external_task.py  filesystem.py
astronomer_operators/core/triggers/: external_dag.py  external_task.py  filesystem.py
astronomer_operators/databricks/: __init__.py
astronomer_operators/databricks/hooks/: databricks.py
astronomer_operators/databricks/operators/: databricks.py
astronomer_operators/databricks/triggers/: databricks.py
astronomer_operators/google/hooks/: bigquery.py  bigquery_async.py
astronomer_operators/google/operators/: bigquery_async.py
astronomer_operators/google/triggers/: bigquery_async.py
astronomer_operators/hooks/: airbyte.py  databricks.py  http.py  postgres.py  snowflake.py
astronomer_operators/http/: __init__.py
astronomer_operators/http/hooks/: http.py
astronomer_operators/http/operators/: http.py
astronomer_operators/http/triggers/: http.py
astronomer_operators/operators/: databricks.py  external_task.py  filesystem.py  http.py
astronomer_operators/postgres/hooks/: postgres.py
astronomer_operators/postgres/operators/: postgres.py
astronomer_operators/postgres/triggers/: postgres.py
astronomer_operators/snowflake/hooks/: snowflake.py
astronomer_operators/snowflake/operators/: snowflake.py
astronomer_operators/snowflake/triggers/: snowflake_trigger.py
astronomer_operators/triggers/: databricks.py  external_dag.py  external_task.py  filesystem.py  http.py
dev/: .dockerignore  Dockerfile  Dockerfile.aws  Dockerfile.emr_eks_container  Dockerfile.google_cloud  README.md  docker-compose.yaml  local_flask_lineage_server.py
dev/dags/: example_async_gcs.py  example_bigquery_queries_async.py  test_redshift_cluster_management.py  test_redshift_sensor.py
dev/integration_test_scripts/: replace_dependencies.py  trigger_dag.py
dev/prepare_release_scripts/: changelog_drafter.py
dev/providers_rc_test_scripts/: trigger_dag.py  trigger_master_dag.py
dev/scripts/: replace_dependencies.py  trigger_master_dag.py
docs/: conf.py  index.rst  installations.rst  modules.rst  providers.rst
docs/_ext/: exampleinclude.py  traverse_operators_sensors.py
docs/_templates/autoapi/: index.rst
docs/_templates/traverse_operators/: index.rst
docs/astronomer/amazon/: index.rst
docs/astronomer/cncf/: index.rst
docs/astronomer/core/: index.rst
docs/astronomer/databricks/: index.rst
docs/astronomer/google/: index.rst
docs/astronomer/http/: index.rst
docs/astronomer/snowflake/: index.rst
docs/providers/: index.rst  operators_and_sensors_list.rst
docs/providers/amazon/: index.rst
docs/providers/apache/: index.rst
docs/providers/cncf/: index.rst
docs/providers/core/: index.rst
docs/providers/databricks/: index.rst
docs/providers/dbt/: index.rst
docs/providers/google/: index.rst
docs/providers/http/: index.rst
docs/providers/microsoft/: index.rst
docs/providers/sftp/: index.rst
docs/providers/snowflake/: index.rst
example_dags/: example_async_gcs.py  example_bigquery_query.sql  example_gcs.py  external_task_wait_for_me.py  test_airbyte.py  test_bigquery.py  test_bigquery_async.py  test_biqquery_queries.py  test_databricks.py  test_external_task.py  test_file_sensor.py  test_gcs_async.py  test_http_sensor.py  test_postgres.py  test_redshift_pause_cluster_management.py  test_redshift_resume_cluster_management.py  test_redshift_sensor.py  test_s3_key_sensor.py  test_snowflake_async.py
license-templates/: LICENSE.rst  LICENSE.txt
scripts/ci/: Dockerfile  requirements.txt
tests/: conftest.py  test_external_task.py  test_nothing.py
tests/astronomer_hooks/: test_databricks_hook.py
tests/astronomer_operators/: test_databricks.py  test_external_task.py  test_filesystem.py  test_http.py  test_postgres.py
tests/astronomer_operators/hooks/: test_databricks.py  (+2 more)
tests/utils/: airflow_util.py  config.py  test_typing_compat.py
(+508 files in other folders)
