[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=short --cov=astronomer --cov-report=xml"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
pretty = true
show_error_codes = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
show_error_context = true
color_output = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

# mypy per-module options:
[[tool.mypy.overrides]]
module = [
    "airflow",
    "asgiref"
]
ignore_missing_imports = true

[tool.pydocstyle]
inherit = false
add_ignore = "D100,D104,D105,D107,D205,D400,D401"
convention = "pep257"
