[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
target-version = ['py39']
fix = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=short --cov=astronomer --cov-report=xml"
testpaths = [
    "tests",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
pretty = true
show_error_codes = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
show_error_context = true
color_output = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

# mypy per-module options:
[[tool.mypy.overrides]]
module = [
    "airflow",
    "asgiref"
]
ignore_missing_imports = true

[tool.pydocstyle]
inherit = false
add_ignore = "D100,D104,D105,D107,D205,D400,D401"
convention = "pep257"

[tool.ruff]
line-length = 120

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "__pycache__",
    "docs/conf.py",
]

target-version = "py37"
fix = true

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
extend-select = [
    "W",    # pycodestyle warnings
    "I",    # isort
    "C90",  # Complexity
#    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
#    "ANN",  # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "T10",  # flake8-debugger
    "A",    # flake8-builtins
    "UP",   # pyupgrade
    "ASYNC",  # flake8-async
]

# Remove this in future
extend-ignore = ["A002", "C901", "E402", "E501", "ISC001", "ISC003", "UP030"]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["astronomer", "tests"]
# TODO: for now, https://github.com/charliermarsh/ruff/issues/1817
known-third-party = ["google", "gcloud"]

[tool.bandit]
# Skip missing timeout in requests API.
# TODO: remove it in future
skips = ["B113"]

[tool.commitizen]
version = "1.19.2"
version_files = [
    "docs/conf.py",
    "astronomer/providers/package.py",
    "setup.cfg",
]
version_scheme = "semver"
