[metadata]
name = astronomer-providers
version = 1.18.4
url = https://github.com/astronomer/astronomer-providers/
author = Astronomer
author_email = humans@astronomer.io
description = Apache Airflow Providers containing Deferrable Operators & Sensors from Astronomer
long_description = file: README.rst
license = Apache License 2.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Apache Airflow
    Framework :: Apache Airflow :: Provider
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source Code=https://github.com/astronomer/astronomer-providers/
    Homepage=https://astronomer.io/
    Documentation=https://astronomer-providers.rtfd.io/
    Changelog=https://github.com/astronomer/astronomer-providers/blob/main/CHANGELOG.rst

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = true
namespace_packages = astronomer,astronomer.providers
install_requires =
    apache-airflow>=2.6.0
    Flask-Session<0.6.0 # This release breaking our tests, let's pin it as a temporary workaround
    aiohttp
    aiofiles
    asgiref
    markupsafe>=1.1.1
zip_safe = false

[options.extras_require]
amazon =
    apache-airflow-providers-amazon>=8.18.0
    aiobotocore>=2.1.1
apache.hive =
    apache-airflow-providers-apache-hive>=6.1.5
    impyla
apache.livy =
    apache-airflow-providers-apache-livy>=3.7.1
    paramiko
cncf.kubernetes =
    # TODO: Update version when below RC is released
    apache-airflow-providers-cncf-kubernetes @https://files.pythonhosted.org/packages/c9/82/c7422f848a249e437b2c5810b9ccc266b80ffd767322722b16ac97cc3013/apache_airflow_providers_cncf_kubernetes-8.0.0rc2.tar.gz
    kubernetes_asyncio
databricks =
    apache-airflow-providers-databricks>=6.1.0
    databricks-sql-connector>=2.0.4;python_version>='3.10'
dbt.cloud =
    apache-airflow-providers-dbt-cloud>=3.5.1
google =
    apache-airflow-providers-google>=10.15.0
    gcloud-aio-storage
    gcloud-aio-bigquery
http =
    apache-airflow-providers-http>=4.9.0
microsoft.azure =
    apache-airflow-providers-microsoft-azure>=9.0.0
sftp =
    apache-airflow-providers-sftp>=4.9.0
    asyncssh>=2.12.0
snowflake =
    apache-airflow-providers-snowflake>=5.3.0
    snowflake-sqlalchemy>=1.4.4  # Temporary solution for https://github.com/astronomer/astronomer-providers/issues/958, we should pin apache-airflow-providers-snowflake version after it pins this package to great than or equal to 1.4.4.
# If in future we move Openlineage extractors out of the repo, this dependency should be removed
openlineage =
    openlineage-airflow>=0.12.0

docs =
    sphinx
    sphinx-autoapi
    sphinx-copybutton
tests =
    aioresponses
    asynctest
    parameterized
    pytest
    pytest-asyncio
    pytest-cov
    pre-commit
mypy =
    mypy>=0.950
    types-aiofiles
    types-boto
    types-certifi
    types-croniter
    types-Deprecated
    types-docutils
    types-freezegun
    types-paramiko
    types-protobuf
    types-python-dateutil
    types-python-slugify
    types-pytz
    types-redis
    types-requests
    types-setuptools
    types-termcolor
    types-tabulate
    types-toml
    types-Markdown
    types-PyMySQL
    types-PyYAML
    snowflake-connector-python>=3.3.0 # Temporary solution for fixing the issue that pip cannot find proper connector version

# All extras from above except 'mypy', 'docs' and 'tests'
all =
    aiobotocore>=2.1.1
    # Update version when the below RC is released
    apache-airflow-providers-amazon>=8.18.0
    apache-airflow-providers-apache-hive>=6.1.5
    apache-airflow-providers-apache-livy>=3.7.1
    # TODO: Update version when below RC is released
    apache-airflow-providers-cncf-kubernetes @https://files.pythonhosted.org/packages/c9/82/c7422f848a249e437b2c5810b9ccc266b80ffd767322722b16ac97cc3013/apache_airflow_providers_cncf_kubernetes-8.0.0rc2.tar.gz
    apache-airflow-providers-databricks>=6.1.0
    apache-airflow-providers-google>=10.15.0
    apache-airflow-providers-http>=4.9.0
    apache-airflow-providers-snowflake>=5.3.0
    apache-airflow-providers-sftp>=4.9.0
    apache-airflow-providers-microsoft-azure>=9.0.0
    asyncssh>=2.12.0
    databricks-sql-connector>=2.0.4;python_version>='3.10'
    apache-airflow-providers-dbt-cloud>=3.5.1
    gcloud-aio-bigquery
    gcloud-aio-storage
    kubernetes_asyncio
    impyla
    openlineage-airflow>=0.12.0
    paramiko
    snowflake-sqlalchemy>=1.4.4  # Temporary solution for https://github.com/astronomer/astronomer-providers/issues/958, we should pin apache-airflow-providers-snowflake version after it pins this package to great than or equal to 1.4.4.

[options.packages.find]
include =
    astronomer.*

[options.entry_points]
apache_airflow_provider=
  provider_info=astronomer.providers.package:get_provider_info
